--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
 </head>
 <body>
+
+    <div class="nav">
+       <div class="button">
+         <p class="btn-red"><a href="thought.html">My thought</a></p>
+           <p class="btn-white"><a href="thought.html">My thought</a></p>
+             <p class="btn-gray"><a href="thought.html">My thought</a></p>
+       </div>
+    </div>
+
     <div class="title">
         <h1> <span class="red">"</span> <span class="white">Theory</span> and <span class="white">practice</span> sometimes clash. And when that happens, <span class="red">theory loses.</span>
        <span class="white"> Every single time.</span> <span class="">"</span></h1>
