--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 </head>
 <body>
 
-    <div class="nav">
-       <div class="button">
-         <p class="btn-red"><a href="thought.html">My thought</a></p>
-           <p class="btn-white"><a href="thought.html">My thought</a></p>
-             <p class="btn-gray"><a href="thought.html">My thought</a></p>
-       </div>
-    </div>
+<div class="nav">
+  <h1><span class="red">#</span> Indragiribhakti</h1>
 
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  
+  <label for="menu-toggle" class="hamburger">
+    <p class="red">*</p>
+  </label>
+
+  <div class="button">
+    <p class="btn-red"><a href="thought.html">My thought</a></p>
+    <p class="btn-white"><a href="thought.html">My thought</a></p>
+    <p class="btn-gray"><a href="thought.html">My thought</a></p>
+  </div>
+</div>
     <div class="title">
         <h1> <span class="red">"</span> <span class="white">Theory</span> and <span class="white">practice</span> sometimes clash. And when that happens, <span class="red">theory loses.</span>
        <span class="white"> Every single time.</span> <span class="">"</span></h1>
