--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <input type="checkbox" id="menu-toggle" class="menu-toggle">
   
   <label for="menu-toggle" class="hamburger">
-    <p class="red">*</p>
+    <!-- <p class="red">*</p> -->
+     <span></span>
+      <span></span>
+       <span></span>
   </label>
 
   <div class="button">
