--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="nav">
-  <h1><span class="red">#</span> Indragiribhakti</h1>
+  <h1><span class="red">&</span>Indragiribhakti</h1>
 
   <input type="checkbox" id="menu-toggle" class="menu-toggle">
   
