add color pallete section

--- a/index.html
+++ b/index.html
@@ -26,12 +26,52 @@
     <p class="btn-white"><a href="thought.html">My thought</a></p>
     <p class="btn-gray"><a href="thought.html">My thought</a></p>
   </div>
-</div>
+  </div>
+
+
     <div class="title">
-        <h1> <span class="red">"</span> <span class="white">Theory</span> and <span class="white">practice</span> sometimes clash. And when that happens, <span class="red">theory loses.</span>
-       <span class="white"> Every single time.</span> <span class="">"</span></h1>
-       <p> ― Linus Torvalds</p>
-        <!-- <a href="thought.html">go thought</a> -->
+      <h1> <span class="red">"</span> <span class="white">Theory</span> and <span class="white">practice</span> sometimes
+        clash. And when that happens, <span class="red">theory loses.</span>
+        <span class="white"> Every single time.</span> <span class="">"</span>
+      </h1>
+      <p> ― Linus Torvalds</p>
     </div>
+
+
+  <div class="wrap-pallete">
+    <h1> <span class="red">$</span> Color Pallete <span class="red">$</span></h1>
+      <div class="pallete">
+
+      <div class="child-red">
+        <div class="red"></div>
+      <p>#353535</p>
+      </div>
+
+      
+      <div class="child-red">
+        <div class="white"></div>
+      <p>#353535</p>
+      </div>
+
+
+      <div class="child-red">
+        <div class="black"></div>
+      <p>#353535</p>
+      </div>
+
+
+      <div class="child-red">
+        <div class="gray"></div>
+      <p>#353535</p>
+      </div>
+
+
+      <div class="child-red">
+        <div class="light-gray"></div>
+      <p>#353535</p>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
