--- a/index.html
+++ b/index.html
@@ -88,16 +88,55 @@
 
 
 
-  <div class="journey">
+  <div class="all-journey">
+
+
+<div class="journey-titler">
+  <span class="red">###############</span>
+      <h1> Heres's a glimpse of my journey </h1>
+    <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
+    </div>
+
+    <div class="journey">
     <div class="journey-title">
       <h1>  <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
     <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
     </div>
-
-    <div class="section-journey">
       <img src="https://images.pdimagearchive.org/collections/the-unicorn-tapestries-1495-1505/48350236866_1244b97304_c.jpg?width=720&height=1200" alt="">
+  </div>
+
+
+
+    <div class="journey">
+       <img src="https://images.pdimagearchive.org/collections/the-unicorn-tapestries-1495-1505/48350236866_1244b97304_c.jpg?width=720&height=1200" alt="">
+    <div class="journey-title">
+      <h1>  <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
+    <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
     </div>
   </div>
+
+
+
+    <div class="journey">
+    <div class="journey-title">
+      <h1>  <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
+    <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
+    </div>
+      <img src="https://images.pdimagearchive.org/collections/the-unicorn-tapestries-1495-1505/48350236866_1244b97304_c.jpg?width=720&height=1200" alt="">
+  </div>
+
+
+
+     <div class="journey">
+       <img src="https://images.pdimagearchive.org/collections/the-unicorn-tapestries-1495-1505/48350236866_1244b97304_c.jpg?width=720&height=1200" alt="">
+    <div class="journey-title">
+      <h1>  <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
+    <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
+    </div>
+  </div>
+
+  </div>
+
 </body>
 
 </html>
