--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
 
   <div class="footer">
     <h1>INDRAGIRIBHAKTI</h1>
+    <div class="footer-text">
+      <p>Lorem, ipsum dolor.</p>
+      <p>Lorem, ipsum dolor.</p>
+      <p>Lorem, ipsum dolor.</p>
+    </div>
   </div>
 
 </body>
