--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div class="footer">
     <h1>INDRAGIRIBHAKTI</h1>
     <div class="footer-text">
-      <p>Lorem, ipsum dolor.</p>
+      <p>© 2026 nothingtosee. All Rights Reserved.</p>
       <p>Lorem, ipsum dolor.</p>
       <p>Lorem, ipsum dolor.</p>
     </div>
