fix flex direction

--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
       <span class="red">###############</span>
       <h1> Heres's a glimpse of my journey </h1>
       <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
+       <span class="red">###############</span>
     </div>
 
-    <div class="journey">
+    <div class="journey reverse">
       <div class="journey-title">
         <h1> <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
         <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
@@ -121,7 +122,7 @@
 
 
 
-    <div class="journey">
+    <div class="journey reverse">
       <div class="journey-title">
         <h1> <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
         <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
