--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="button">
       <p class="btn-red"><a href="thought.html">My thought</a></p>
-      <p class="btn-white"><a href="thought.html">My thought</a></p>
+      <p class="btn-white"><a href="portfolio.html">Portfolio</a></p>
       <p class="btn-gray"><a href="thought.html">My thought</a></p>
     </div>
   </div>
