--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/portfolio.css">
 </head>
-<body>
+<body style="margin: 0;">
+<div class="journey">
+<div class="journey-title">
+    <h1>Lorem, ipsum dolor.</h1>
+</div>
 
+</div>
+<div class="journey1">
 
-    
+</div>
 </body>
 </html>
