add portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/portfolio.css">
 </head>
-<body style="margin: 0;">
-<div class="journey">
-<div class="journey-title">
-    <h1>Lorem, ipsum dolor.</h1>
-</div>
 
-</div>
-<div class="journey1">
+<body style="margin: 0; padding: 0;">
 
-</div>
+    <div class="journey">
+        <div class="journey-title">
+            <h1>Lorem, ipsum dolor.</h1>
+        </div>
+
+    </div>
+
+
+        <div class="journey1">
+        <div class="journey-title1">
+            <h1>Lorem, ipsum dolor.</h1>
+        </div>
+
+    </div>
+
+
+        <div class="journey2">
+        <div class="journey-title2">
+            <h1>Lorem, ipsum dolor.</h1>
+        </div>
+
+    </div>
+
+        <div class="journey3">
+        <div class="journey-title3">
+            <h1>Lorem, ipsum dolor.</h1>
+        </div>
+
+    </div>
+
 </body>
+
 </html>
