--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,9 @@
 
     <div class="journey">
         <div class="journey-title">
+            <h2>#D71921</h2>
             <h1>Lorem, ipsum dolor.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quo dolores optio similique suscipit quia fugiat consequatur repudiandae fugit nam.</p>
         </div>
 
     </div>
