--- a/index.html
+++ b/index.html
@@ -157,85 +157,57 @@
   </div>
 
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-
 <script>
-  gsap.registerPlugin(TextPlugin, ScrollTrigger);
+  // 1. Buat elemen kursor secara dinamis
+const cursor = document.createElement('div');
+Object.assign(cursor.style, {
+  position: 'fixed',
+  width: '18px',
+  height: '18px',
+  backgroundColor: '#D71921',
+  borderRadius: '50%',
+  pointerEvents: 'none',
+  zIndex: '10000',
+  transform: 'translate(-50%, -50%)',
+  transition: 'width 0.2s, height 0.2s, background-color 0.2s, border 0.2s',
+  mixBlendMode: 'normal'
+});
+document.body.appendChild(cursor);
 
-  // --- 1. TYPING EFFECT (LOOP) ---
-  // Kita buat teks di journey-titler mengetik sendiri secara bergantian
-  const phrases = [
-    "Heres's a glimpse of my journey",
-    "Experience is the best teacher",
-    "Stay hungry, stay foolish",
-    "Theory and practice must meet"
-  ];
-  
-  let mainTitle = document.querySelector(".journey-titler h1");
-  let masterTl = gsap.timeline({repeat: -1});
+// 2. Update posisi kursor mengikuti mouse
+window.addEventListener('mousemove', (e) => {
+  cursor.style.left = e.clientX + 'px';
+  cursor.style.top = e.clientY + 'px';
+});
 
-  phrases.forEach(phrase => {
-    let tl = gsap.timeline({repeat: 1, yoyo: true, repeatDelay: 2});
-    tl.to(mainTitle, {duration: 1.5, text: phrase, ease: "none"});
-    masterTl.add(tl);
+// 3. Efek Interaksi (Hover)
+const clickables = document.querySelectorAll('a, button, label, .child-red, input[type="checkbox"]');
+
+clickables.forEach(el => {
+  el.addEventListener('mouseenter', () => {
+    // Berubah jadi lingkaran outline saat hover
+    cursor.style.width = '30px';
+    cursor.style.height = '30px';
+    cursor.style.backgroundColor = 'white';
+    cursor.style.border = '1px solid #D71921';
   });
 
-
-  // --- 2. MINIMALIST ENTRANCE (FADE + SLIGHT SLIDE) ---
-  // Efek muncul per section saat di-scroll, tanpa distorsi
-  const sections = document.querySelectorAll('.journey, .wrap-pallete, .footer');
-  
-  sections.forEach((section) => {
-    gsap.from(section, {
-      scrollTrigger: {
-        trigger: section,
-        start: "top 85%",
-        toggleActions: "play none none none"
-      },
-      opacity: 0,
-      y: 20,
-      filter: "blur(5px)", // Sedikit blur untuk kesan transisi optik
-      duration: 1,
-      ease: "power2.out"
-    });
+  el.addEventListener('mouseleave', () => {
+    // Kembali ke titik merah semula
+    cursor.style.width = '28px';
+    cursor.style.height = '28px';
+    cursor.style.backgroundColor = '#D71921';
+    cursor.style.border = 'none';
   });
+});
 
-
-  // --- 3. STAGGERED PALLETE (EFEK LOADING DATA) ---
-  gsap.from(".child-red", {
-    scrollTrigger: {
-      trigger: ".wrap-pallete",
-      start: "top 80%"
-    },
-    opacity: 0,
-    y: 10,
-    stagger: 0.05,
-    duration: 0.5,
-    ease: "steps(5)" // Efek 'patah-patah' mekanik khas dot matrix
-  });
-
-
-  // --- 4. CURSOR MINIMALIS (DOT) ---
-  const cursor = document.createElement('div');
-  cursor.style.cssText = "position:fixed; width:6px; height:6px; background:#D71921; border-radius:50%; pointer-events:none; z-index:10000; transition: transform 0.1s;";
-  document.body.appendChild(cursor);
-
-  window.addEventListener("mousemove", (e) => {
-    gsap.to(cursor, { x: e.clientX, y: e.clientY, duration: 0.3 });
-  });
-
-  // --- 5. RED ACCENT PULSE ---
-  // Membuat simbol * dan & berkedip halus
-  gsap.to(".red", {
-    opacity: 0.3,
-    duration: 0.8,
-    repeat: -1,
-    yoyo: true,
-    ease: "power1.inOut"
-  });
-
+// 4. Efek Klik (Menciut sebentar)
+window.addEventListener('mousedown', () => {
+  cursor.style.transform = 'translate(-50%, -50%) scale(0.7)';
+});
+window.addEventListener('mouseup', () => {
+  cursor.style.transform = 'translate(-50%, -50%) scale(1)';
+});
 </script>
 
 </html>
