--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 
   <div class="nav">
-    <h1><span class="red">&</span>N O T H I N G (R)</h1>
+    <h1>NOTHING <span class="red">(R)</span> </h1>
 
     <input type="checkbox" id="menu-toggle" class="menu-toggle">
 
