--- a/index.html
+++ b/index.html
@@ -99,8 +99,12 @@
 
   <div class="all-journey">
 
+    <div id="title">
+      <p>INDRAGIRIBHAKTI</p>
+    </div>
 
-    <div class="journey-titler">
+
+    <!-- <div class="journey-titler">
       <span class="red">***********************</span>
       <h1> Heres's a glimpse of my journey </h1>
       <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
@@ -151,7 +155,7 @@
         <h1> <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
         <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
