--- a/index.html
+++ b/index.html
@@ -99,12 +99,10 @@
 
   <div class="all-journey">
 
-    <div id="title">
-      <p>INDRAGIRIBHAKTI</p>
-    </div>
 
 
-    <!-- <div class="journey-titler">
+
+  <div class="journey-titler">
       <span class="red">***********************</span>
       <h1> Heres's a glimpse of my journey </h1>
       <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
@@ -113,7 +111,7 @@
 
     <div class="journey reverse">
       <div class="journey-title">
-        <h1><span class="red">*</span>Heres's a glimpse of my journey<span class="red">*</span></h1>
+        <h1>Heres's a glimpse of my journey</h1>
         <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
       </div>
       <img
@@ -128,7 +126,7 @@
         src="https://images.pdimagearchive.org/collections/the-unicorn-tapestries-1495-1505/48350236866_1244b97304_c.jpg?width=720&height=1200"
         alt="">
       <div class="journey-title">
-        <h1> <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
+        <h1>Heres's a glimpse of my journey </h1>
         <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
       </div>
     </div>
@@ -137,7 +135,7 @@
 
     <div class="journey reverse">
       <div class="journey-title">
-        <h1> <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
+        <h1>Heres's a glimpse of my journey </h1>
         <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
       </div>
       <img
@@ -152,10 +150,10 @@
         src="https://images.pdimagearchive.org/collections/the-unicorn-tapestries-1495-1505/48350236866_1244b97304_c.jpg?width=720&height=1200"
         alt="">
       <div class="journey-title">
-        <h1> <span class="red">*</span> Heres's a glimpse of my journey <span class="red">*</span></h1>
+        <h1>  Heres's a glimpse of my journey </h1>
         <p>I believe with enough experience and knowledge even an ant can lift this whole world.</p>
       </div>
-    </div> -->
+    </div>
 
   </div>
 
